// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should work for multiple CommonJS exports with source maps: errors 1`] = `Array []`;

exports[`loader should work for multiple CommonJS exports with source maps: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
exports[\\"object\\"] = (object);
exports[\\"otherObject\\"] = (otherObject);"
`;

exports[`loader should work for multiple CommonJS exports with source maps: result 1`] = `Object {}`;

exports[`loader should work for multiple CommonJS exports with source maps: warnings 1`] = `Array []`;

exports[`loader should work for multiple CommonJS exports: errors 1`] = `Array []`;

exports[`loader should work for multiple CommonJS exports: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
exports[\\"object\\"] = (object);
exports[\\"otherObject\\"] = (otherObject);"
`;

exports[`loader should work for multiple CommonJS exports: result 1`] = `
Object {
  "foo": "bar",
}
`;

exports[`loader should work for multiple CommonJS exports: warnings 1`] = `Array []`;

exports[`loader should work for single CommonJS export with source maps: errors 1`] = `Array []`;

exports[`loader should work for single CommonJS export with source maps: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
module.exports = object;"
`;

exports[`loader should work for single CommonJS export with source maps: result 1`] = `Object {}`;

exports[`loader should work for single CommonJS export with source maps: warnings 1`] = `Array []`;

exports[`loader should work for single CommonJS export: errors 1`] = `Array []`;

exports[`loader should work for single CommonJS export: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
module.exports = object;"
`;

exports[`loader should work for single CommonJS export: result 1`] = `
Object {
  "key": "value",
}
`;

exports[`loader should work for single CommonJS export: warnings 1`] = `Array []`;

exports[`loader should work with inline syntax: errors 1`] = `Array []`;

exports[`loader should work with inline syntax: module 1`] = `
"module.exports = require('../../src/cjs.js?CV!./exports/cv.js');
"
`;

exports[`loader should work with inline syntax: result 1`] = `
Object {
  "Image": [Function],
  "stackBoxBlurMult": Array [
    1,
    171,
    205,
    293,
    57,
    373,
    79,
    137,
    241,
    27,
    391,
    357,
    41,
    19,
    283,
    265,
  ],
}
`;

exports[`loader should work with inline syntax: warnings 1`] = `Array []`;

exports[`loader should work without options: errors 1`] = `Array []`;

exports[`loader should work without options: module 1`] = `
"var CV = CV || {};

CV.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

CV.stackBoxBlurMult =
  [1, 171, 205, 293, 57, 373, 79, 137, 241, 27, 391, 357, 41, 19, 283, 265];


/*** EXPORTS FROM exports-loader ***/
"
`;

exports[`loader should work without options: result 1`] = `Object {}`;

exports[`loader should work without options: warnings 1`] = `Array []`;

exports[`loader should work: errors 1`] = `Array []`;

exports[`loader should work: module 1`] = `
"var CV = CV || {};

CV.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

CV.stackBoxBlurMult =
  [1, 171, 205, 293, 57, 373, 79, 137, 241, 27, 391, 357, 41, 19, 283, 265];


/*** EXPORTS FROM exports-loader ***/
module.exports = CV;"
`;

exports[`loader should work: result 1`] = `
Object {
  "Image": [Function],
  "stackBoxBlurMult": Array [
    1,
    171,
    205,
    293,
    57,
    373,
    79,
    137,
    241,
    27,
    391,
    357,
    41,
    19,
    283,
    265,
  ],
}
`;

exports[`loader should work: warnings 1`] = `Array []`;
